Restructure as proper Python package with GUI enhancements
Restructure monolithic scripts into src/hecras_runner/ package with
parser, file_ops, runner, cli, and gui modules. Add pyproject.toml
build config and 66 unit tests.

GUI enhancements:
- Horizontal PanedWindow layout (controls left, log right)
- Plan selection table (Treeview) with geom/flow descriptions and filter
- Parent HEC-RAS instance detection and management
- Structured completion modal with per-plan results
- SimulationResult dataclass with timing and file tracking

Remove legacy monolithic scripts (hecras_gui_runner.py,
run_hecras_parallel.py) and stale spec files.

--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ ENV/
 build/
 dist/
 
-# HEC-RAS temp/runtime files
-HECRAS_*/
+# HEC-RAS temp/runtime files (anchored to repo root)
+/HECRAS_*/
 *.computeMsgs.txt
 *.rasmap.backup
 systemInfoEncoded.txt
