Replace test terrain with clipped existing_01 and clean up repo
- Switch geometry from g01 (geoBR) to g02 (geometry_01) with existing_01 terrain
- Clip source TIF to model extent + 200m buffer (145 MB -> 7 MB, EPSG:32640)
- Remove existing_02 terrain, Land Classification, and data/del.me placeholder
- Delete runtime output files from disk
- Update .gitignore overrides for new tracked HDF files
- Fix test_parser assertions for g02 geometry

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ dist/
 /HECRAS_*/
 *.computeMsgs.txt
 *.rasmap.backup
+*.source.tif
 systemInfoEncoded.txt
 
 # HEC-RAS generated output (large binary files)
@@ -32,9 +33,8 @@ systemInfoEncoded.txt
 *.x[0-9][0-9]
 
 # Test project source data (override ignores above)
-!tests/PRtest1.g01.hdf
-!tests/Terrain/existing_02/existing_02.hdf
-!tests/Land Classification/LandCover.hdf
+!tests/PRtest1.g02.hdf
+!tests/Terrain/existing_01/existing_01.hdf
 !tests/100yCC_2024.dss
 
 # OS files
