Move test project to test_projects/ and rename to small_project_01
- Rename PRtest1 -> small_project_01 in dedicated test_projects/ directory
- Fix rasmap paths (..\tests\ -> .\) for projection, terrain, features, events
- Restore missing DSS File reference and clear stale DXF path in .prj
- Remove duplicate EventConditions and Land Classification folder reference
- Update test fixtures, assertions, and .gitignore for new layout
- Drop Flow_hydrograph/hydrograph.xlsx (unused by model)

--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,9 @@ systemInfoEncoded.txt
 *.x[0-9][0-9]
 
 # Test project source data (override ignores above)
-!tests/PRtest1.g02.hdf
-!tests/Terrain/existing_01/existing_01.hdf
-!tests/100yCC_2024.dss
+!test_projects/small_project_01.g02.hdf
+!test_projects/Terrain/existing_01/existing_01.hdf
+!test_projects/100yCC_2024.dss
 
 # OS files
 Thumbs.db
