--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ name = "hecras-runner"
 version = "0.1.0"
 description = "HEC-RAS parallel simulation runner"
 requires-python = ">=3.13"
-dependencies = [
-    "pywin32",
-]
+dependencies = []
 
 [project.optional-dependencies]
+com = ["pywin32"]
+hdf = ["h5py"]
 dev = [
     "pytest",
     "ruff",
