Add distributed execution, GUI UX improvements, and version check
- DB job queue client (psycopg), SMB file transfer, worker mode
- App settings persisted to %APPDATA%/hecras_runner/settings.json
- GUI: in-table results, per-column filters, per-plan log popup,
  clipboard copy, loading spinner, Network tab with traffic light
  DB indicator and Worker toggle button
- Version check system (background thread, zero deps)
- CLI: progress reporting, graceful Ctrl+C, timeout support
- 198 tests passing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = []
 [project.optional-dependencies]
 com = ["pywin32"]
 hdf = ["h5py"]
+db = ["psycopg[binary]", "psycopg_pool"]
 dev = [
     "pytest",
     "ruff",
