--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,14 @@ dependencies = []
 com = ["pywin32"]
 hdf = ["h5py"]
 db = ["psycopg[binary]", "psycopg_pool"]
+gui = ["PyQt6", "psycopg[binary]", "psycopg_pool"]
 dev = [
     "pytest",
     "ruff",
     "pyinstaller",
+    "PyQt6",
+    "psycopg[binary]",
+    "psycopg_pool",
 ]
 
 [project.scripts]
@@ -24,6 +28,9 @@ hecras-runner = "hecras_runner.cli:main"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+hecras_runner = ["resources/*.png"]
 
 [tool.ruff]
 target-version = "py313"
